[gd_scene load_steps=22 format=2]

[ext_resource path="res://test road.png" type="Texture" id=1]
[ext_resource path="res://NESCyrillic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Level1.gd" type="Script" id=3]
[ext_resource path="res://mainfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://VictoryScreen1.gd" type="Script" id=5]
[ext_resource path="res://wallClosed.png" type="Texture" id=6]
[ext_resource path="res://Wall.gd" type="Script" id=7]
[ext_resource path="res://wallOpen.png" type="Texture" id=8]
[ext_resource path="res://CarInstance.tscn" type="PackedScene" id=9]
[ext_resource path="res://Lives.gd" type="Script" id=10]
[ext_resource path="res://LostLifeScreen.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 79.9719 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 78.338, 20.4794 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 75 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15.1645, 2.57237 )

[sub_resource type="DynamicFont" id=7]
size = 36
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 36
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Level1" type="Node"]
script = ExtResource( 3 )

[node name="test road" type="Sprite" parent="."]
position = Vector2( 482.824, 287.034 )
texture = ExtResource( 1 )

[node name="rightLane" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightLane"]
position = Vector2( 591.666, 500.041 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="rightLane"]
position = Vector2( 702.761, 172.775 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="leftLane" type="Area2D" parent="."]
position = Vector2( 525.341, 458.284 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftLane"]
position = Vector2( 38.6426, -1.13654 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="leftLane"]
position = Vector2( -396.271, 83.1888 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="leftLane"]
position = Vector2( -137.271, 255.188 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Victory Lane" type="Area2D" parent="."]
position = Vector2( 246, 202 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Victory Lane"]
position = Vector2( 87, 4 )
shape = SubResource( 5 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Victory Lane"]
position = Vector2( 388, 151 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Victory Lane"]
position = Vector2( 160, 230 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Victory Lane"]
position = Vector2( 317, -74 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Cars" type="Node" parent="."]

[node name="Car" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 592.762, 459.883 )

[node name="Car2" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 593.356, 510.775 )

[node name="Car3" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 593.022, 559.926 )

[node name="Car4" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 523.822, 548.947 )

[node name="Car5" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 524.823, 497.365 )

[node name="Car6" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 525.231, 451.471 )

[node name="Car11" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 444.159, 17.6033 )
rotation = 3.14159

[node name="Car12" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 444.159, 65.7119 )
rotation = 3.14159

[node name="Car13" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 443.268, 106.693 )
rotation = 3.14159

[node name="Car14" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 368.517, 17.2589 )
rotation = 3.14159

[node name="Car15" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 367.85, 59.9738 )
rotation = 3.14159

[node name="Car16" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 367.85, 99.3515 )
rotation = 3.14159

[node name="Car17" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 310.85, 384.352 )
rotation = 1.5708

[node name="Car18" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 255.85, 386.352 )
rotation = 1.5708

[node name="Car19" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 256.85, 321.352 )
rotation = 1.5708

[node name="Car20" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 308.85, 321.352 )
rotation = 1.5708

[node name="Car7" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 655.575, 170.067 )
rotation = -1.5708

[node name="Car9" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 703.575, 170.567 )
rotation = -1.5708

[node name="Car8" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 653.815, 238.762 )
rotation = -1.5708

[node name="Car10" parent="Cars" instance=ExtResource( 9 )]
position = Vector2( 707.315, 242.262 )
rotation = -1.5708

[node name="Gates" type="Node" parent="."]

[node name="Gate" type="StaticBody2D" parent="Gates"]
position = Vector2( 596.283, 417.266 )
collision_mask = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Gates/Gate"]
position = Vector2( -0.442444, -0.147705 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate"]
position = Vector2( -0.498474, 0.318298 )
shape = SubResource( 4 )

[node name="Gate2" type="StaticBody2D" parent="Gates"]
position = Vector2( 524.476, 418.707 )
collision_mask = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Gates/Gate2"]
position = Vector2( -0.442444, -0.147705 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate2"]
position = Vector2( -0.498474, 0.318298 )
shape = SubResource( 4 )

[node name="Gate3" type="StaticBody2D" parent="Gates"]
position = Vector2( 623.163, 172.034 )
rotation = 1.5708
collision_mask = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Gates/Gate3"]
position = Vector2( -0.442444, -0.147705 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate3"]
position = Vector2( -0.498474, 0.318298 )
shape = SubResource( 4 )

[node name="Gate7" type="StaticBody2D" parent="Gates"]
position = Vector2( 347.163, 321.034 )
rotation = 1.5708
collision_mask = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Gates/Gate7"]
position = Vector2( -0.442444, -0.147705 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate7"]
position = Vector2( -0.498474, 0.318298 )
shape = SubResource( 4 )

[node name="Gate8" type="StaticBody2D" parent="Gates"]
position = Vector2( 344.163, 386.034 )
rotation = 1.5708
collision_mask = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Gates/Gate8"]
position = Vector2( -0.442444, -0.147705 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate8"]
position = Vector2( -0.498474, 0.318298 )
shape = SubResource( 4 )

[node name="Gate4" type="StaticBody2D" parent="Gates"]
position = Vector2( 621.951, 240.058 )
rotation = 1.5708
collision_mask = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Gates/Gate4"]
position = Vector2( -0.442444, -0.147705 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate4"]
position = Vector2( -0.498474, 0.318298 )
shape = SubResource( 4 )

[node name="Gate5" type="StaticBody2D" parent="Gates"]
position = Vector2( 444.467, 141.417 )
collision_mask = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Gates/Gate5"]
position = Vector2( -0.442444, -0.147705 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate5"]
position = Vector2( -0.498474, 0.318298 )
shape = SubResource( 4 )

[node name="Gate6" type="StaticBody2D" parent="Gates"]
position = Vector2( 365.044, 139.414 )
collision_mask = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Gates/Gate6"]
position = Vector2( -0.442444, -0.147705 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gates/Gate6"]
position = Vector2( -0.498474, 0.318298 )
shape = SubResource( 4 )

[node name="VictoryScreen1" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VictoryScreen1"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VictoryScreen1"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryScreen1/CenterContainer"]
margin_left = 284.0
margin_top = 206.0
margin_right = 740.0
margin_bottom = 393.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="victoryText" type="CenterContainer" parent="VictoryScreen1/CenterContainer/VBoxContainer"]
margin_right = 456.0
margin_bottom = 47.0

[node name="Label" type="Label" parent="VictoryScreen1/CenterContainer/VBoxContainer/victoryText"]
margin_right = 456.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 4 )
text = "Level Copmlete!"

[node name="newPoints" type="CenterContainer" parent="VictoryScreen1/CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 456.0
margin_bottom = 78.0

[node name="HBoxContainer" type="HBoxContainer" parent="VictoryScreen1/CenterContainer/VBoxContainer/newPoints"]
margin_left = 39.0
margin_right = 417.0
margin_bottom = 27.0

[node name="Label2" type="Label" parent="VictoryScreen1/CenterContainer/VBoxContainer/newPoints/HBoxContainer"]
margin_right = 302.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 7 )
text = "Points you gained: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newPoints" type="Label" parent="VictoryScreen1/CenterContainer/VBoxContainer/newPoints/HBoxContainer"]
margin_left = 306.0
margin_right = 358.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 8 )
text = "null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="totalPoints" type="CenterContainer" parent="VictoryScreen1/CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 456.0
margin_bottom = 109.0

[node name="HBoxContainer" type="HBoxContainer" parent="VictoryScreen1/CenterContainer/VBoxContainer/totalPoints"]
margin_left = 87.0
margin_right = 368.0
margin_bottom = 27.0

[node name="Label2" type="Label" parent="VictoryScreen1/CenterContainer/VBoxContainer/totalPoints/HBoxContainer"]
margin_right = 205.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 7 )
text = "Total score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="totalPoints" type="Label" parent="VictoryScreen1/CenterContainer/VBoxContainer/totalPoints/HBoxContainer"]
margin_left = 209.0
margin_right = 261.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 8 )
text = "null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" type="CenterContainer" parent="VictoryScreen1/CenterContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 456.0
margin_bottom = 148.0

[node name="HBoxContainer" type="HBoxContainer" parent="VictoryScreen1/CenterContainer/VBoxContainer/NextLevel"]
margin_left = 95.0
margin_right = 360.0
margin_bottom = 35.0

[node name="selector" type="Label" parent="VictoryScreen1/CenterContainer/VBoxContainer/NextLevel/HBoxContainer"]
margin_right = 33.0
margin_bottom = 35.0
rect_min_size = Vector2( 33, 0 )
custom_fonts/font = SubResource( 6 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next Level" type="Label" parent="VictoryScreen1/CenterContainer/VBoxContainer/NextLevel/HBoxContainer"]
margin_left = 37.0
margin_right = 265.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 6 )
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="CenterContainer" parent="VictoryScreen1/CenterContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 456.0
margin_bottom = 187.0

[node name="HBoxContainer" type="HBoxContainer" parent="VictoryScreen1/CenterContainer/VBoxContainer/Quit"]
margin_left = 95.0
margin_right = 360.0
margin_bottom = 35.0

[node name="selector" type="Label" parent="VictoryScreen1/CenterContainer/VBoxContainer/Quit/HBoxContainer"]
margin_right = 33.0
margin_bottom = 35.0
rect_min_size = Vector2( 33, 0 )
custom_fonts/font = SubResource( 6 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Label" parent="VictoryScreen1/CenterContainer/VBoxContainer/Quit/HBoxContainer"]
margin_left = 37.0
margin_right = 265.0
margin_bottom = 35.0
rect_min_size = Vector2( 228, 0 )
custom_fonts/font = SubResource( 6 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LostLifeScreen" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="LostLifeScreen"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.498039 )

[node name="CenterContainer" type="CenterContainer" parent="LostLifeScreen"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="LostLifeScreen/CenterContainer"]
margin_left = 212.0
margin_top = 212.0
margin_right = 812.0
margin_bottom = 388.0

[node name="maintitle" type="CenterContainer" parent="LostLifeScreen/CenterContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 47.0

[node name="maintitle" type="Label" parent="LostLifeScreen/CenterContainer/VBoxContainer/maintitle"]
margin_left = 92.0
margin_right = 508.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 4 )
text = "A car crashed!"

[node name="subtitle" type="CenterContainer" parent="LostLifeScreen/CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 600.0
margin_bottom = 98.0

[node name="subtitile" type="Label" parent="LostLifeScreen/CenterContainer/VBoxContainer/subtitle"]
margin_right = 600.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 4 )
text = "and you lost a life :("

[node name="retryMain" type="CenterContainer" parent="LostLifeScreen/CenterContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 600.0
margin_bottom = 137.0

[node name="retryMain" type="HBoxContainer" parent="LostLifeScreen/CenterContainer/VBoxContainer/retryMain"]
margin_left = 224.0
margin_right = 375.0
margin_bottom = 35.0

[node name="selector" type="Label" parent="LostLifeScreen/CenterContainer/VBoxContainer/retryMain/retryMain"]
margin_right = 33.0
margin_bottom = 35.0
rect_min_size = Vector2( 33, 0 )
custom_fonts/font = SubResource( 9 )
text = "> "

[node name="retrymain" type="Label" parent="LostLifeScreen/CenterContainer/VBoxContainer/retryMain/retryMain"]
margin_left = 37.0
margin_right = 151.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 10 )
text = "Retry"

[node name="quit" type="CenterContainer" parent="LostLifeScreen/CenterContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 600.0
margin_bottom = 176.0

[node name="quit" type="HBoxContainer" parent="LostLifeScreen/CenterContainer/VBoxContainer/quit"]
margin_left = 224.0
margin_right = 375.0
margin_bottom = 35.0

[node name="selector" type="Label" parent="LostLifeScreen/CenterContainer/VBoxContainer/quit/quit"]
margin_right = 33.0
margin_bottom = 35.0
rect_min_size = Vector2( 33, 0 )
custom_fonts/font = SubResource( 9 )
text = "> "

[node name="Label2" type="Label" parent="LostLifeScreen/CenterContainer/VBoxContainer/quit/quit"]
margin_left = 37.0
margin_right = 151.0
margin_bottom = 35.0
rect_min_size = Vector2( 114, 0 )
custom_fonts/font = SubResource( 10 )
text = "Quit"

[node name="Lives" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = 0.091413
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Lives"]
margin_right = 236.0
margin_bottom = 98.0

[node name="VBoxContainer" type="VBoxContainer" parent="Lives/CenterContainer"]
margin_right = 236.0
margin_bottom = 98.0

[node name="CenterContainer" type="CenterContainer" parent="Lives/CenterContainer/VBoxContainer"]
margin_right = 236.0
margin_bottom = 47.0

[node name="Label" type="Label" parent="Lives/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 40.0
margin_right = 196.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 4 )
text = "Lives"

[node name="HBoxContainer" type="HBoxContainer" parent="Lives/CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 236.0
margin_bottom = 98.0

[node name="heart1" type="Label" parent="Lives/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 76.0
margin_bottom = 47.0
rect_min_size = Vector2( 76, 0 )
custom_fonts/font = ExtResource( 4 )

[node name="heart2" type="Label" parent="Lives/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 156.0
margin_bottom = 47.0
rect_min_size = Vector2( 76, 0 )
custom_fonts/font = ExtResource( 4 )

[node name="heart3" type="Label" parent="Lives/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 236.0
margin_bottom = 47.0
rect_min_size = Vector2( 76, 0 )
custom_fonts/font = ExtResource( 4 )
[connection signal="body_entered" from="rightLane" to="Cars/Car" method="_on_rightLane_body_entered"]
[connection signal="body_exited" from="rightLane" to="Cars/Car" method="_on_rightLane_body_exited"]
[connection signal="body_entered" from="leftLane" to="Cars/Car" method="_on_leftLane_body_entered"]
[connection signal="body_exited" from="leftLane" to="Cars/Car" method="_on_leftLane_body_exited"]
[connection signal="body_entered" from="Victory Lane" to="Cars/Car" method="_on_Victory_Lane_body_entered"]
